--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -11,26 +11,27 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-10-26 Sat 16:41]
+#+CAPTION: Clock summary at [2019-10-26 Sat 17:39]
 | <75>                                               |         |       |       |       |
 | Headline                                           | Time    |       |       |     % |
 |----------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                       | *44:07* |       |       | 100.0 |
+| *Total time*                                       | *44:24* |       |       | 100.0 |
 |----------------------------------------------------+---------+-------+-------+-------|
-| Stories                                            | 44:07   |       |       | 100.0 |
-| Active                                             |         | 44:07 |       | 100.0 |
-| Edit release notes for previous sprint             |         |       |  3:36 |   8.2 |
+| Stories                                            | 44:24   |       |       | 100.0 |
+| Active                                             |         | 44:24 |       | 100.0 |
+| Edit release notes for previous sprint             |         |       |  3:36 |   8.1 |
 | Create a demo and presentation for previous sprint |         |       |  1:39 |   3.7 |
 | Sprint and product backlog grooming                |         |       |  3:06 |   7.0 |
 | Remove test model sanitizer                        |         |       |  0:20 |   0.8 |
 | Remove master headers                              |         |       |  1:12 |   2.7 |
-| Fix the issues with tests in reference model       |         |       |  3:53 |   8.8 |
+| Fix the issues with tests in reference model       |         |       |  3:53 |   8.7 |
 | Update static strings to string views              |         |       |  1:15 |   2.8 |
 | ODB include directories is incorrect               |         |       |  1:43 |   3.9 |
-| Create a "modeling" report                         |         |       |  4:56 |  11.2 |
-| Move registrar into assets                         |         |       |  5:29 |  12.4 |
+| Create a "modeling" report                         |         |       |  4:56 |  11.1 |
+| Move visual studio related options to top profile  |         |       |  0:17 |   0.6 |
+| Move registrar into assets                         |         |       |  5:29 |  12.3 |
 | Fix compilation errors in nightly                  |         |       |  0:24 |   0.9 |
-| Upgrade to boost 1.70                              |         |       | 10:00 |  22.7 |
+| Upgrade to boost 1.70                              |         |       | 10:00 |  22.5 |
 | Setup laptop to work on dogen                      |         |       |  0:17 |   0.6 |
 | Org-mode as a carrier format for modeling          |         |       |  5:37 |  12.7 |
 | Try to add relational tracing support              |         |       |  0:40 |   1.5 |
@@ -509,6 +510,15 @@ Conclusions:
   kinds of questions. The relational model is a more general solution
   to the problem. If we need to extend it we can write stored
   procedures in postgres.
+
+*** COMPLETED Move visual studio related options to top profile       :story:
+    CLOSED: [2019-10-26 Sat 17:38]
+    :LOGBOOK:
+    CLOCK: [2019-10-26 Sat 17:21]--[2019-10-26 Sat 17:38] =>  0:17
+    :END:
+
+At present we are duplicating all of the visual studio related options
+across a number of models. We should use a profile instead.
 
 *** STARTED Move registrar into assets                                :story:
     :LOGBOOK:
