relational: generate latest model
- use the new relational profile
- generates CMake and ODB facets

--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -684,6 +684,7 @@ Links:
 
 *** STARTED Try to add relational tracing support                     :story:
     :LOGBOOK:
+    CLOCK: [2019-10-26 Sat 17:40]--[2019-10-26 Sat 17:46] =>  0:06
     CLOCK: [2019-10-26 Sat 16:01]--[2019-10-26 Sat 16:41] =>  0:40
     :END:
 
