--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -11,30 +11,30 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-10-26 Sat 17:39]
+#+CAPTION: Clock summary at [2019-10-26 Sat 18:00]
 | <75>                                               |         |       |       |       |
 | Headline                                           | Time    |       |       |     % |
 |----------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                       | *44:24* |       |       | 100.0 |
+| *Total time*                                       | *44:42* |       |       | 100.0 |
 |----------------------------------------------------+---------+-------+-------+-------|
-| Stories                                            | 44:24   |       |       | 100.0 |
-| Active                                             |         | 44:24 |       | 100.0 |
+| Stories                                            | 44:42   |       |       | 100.0 |
+| Active                                             |         | 44:42 |       | 100.0 |
 | Edit release notes for previous sprint             |         |       |  3:36 |   8.1 |
 | Create a demo and presentation for previous sprint |         |       |  1:39 |   3.7 |
-| Sprint and product backlog grooming                |         |       |  3:06 |   7.0 |
-| Remove test model sanitizer                        |         |       |  0:20 |   0.8 |
+| Sprint and product backlog grooming                |         |       |  3:06 |   6.9 |
+| Remove test model sanitizer                        |         |       |  0:20 |   0.7 |
 | Remove master headers                              |         |       |  1:12 |   2.7 |
 | Fix the issues with tests in reference model       |         |       |  3:53 |   8.7 |
 | Update static strings to string views              |         |       |  1:15 |   2.8 |
-| ODB include directories is incorrect               |         |       |  1:43 |   3.9 |
-| Create a "modeling" report                         |         |       |  4:56 |  11.1 |
+| ODB include directories is incorrect               |         |       |  1:43 |   3.8 |
+| Create a "modeling" report                         |         |       |  4:56 |  11.0 |
 | Move visual studio related options to top profile  |         |       |  0:17 |   0.6 |
 | Move registrar into assets                         |         |       |  5:29 |  12.3 |
 | Fix compilation errors in nightly                  |         |       |  0:24 |   0.9 |
-| Upgrade to boost 1.70                              |         |       | 10:00 |  22.5 |
+| Upgrade to boost 1.70                              |         |       | 10:00 |  22.4 |
 | Setup laptop to work on dogen                      |         |       |  0:17 |   0.6 |
-| Org-mode as a carrier format for modeling          |         |       |  5:37 |  12.7 |
-| Try to add relational tracing support              |         |       |  0:40 |   1.5 |
+| Org-mode as a carrier format for modeling          |         |       |  5:37 |  12.6 |
+| Try to add relational tracing support              |         |       |  0:58 |   2.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -684,6 +684,8 @@ Links:
 
 *** STARTED Try to add relational tracing support                     :story:
     :LOGBOOK:
+    CLOCK: [2019-10-26 Sat 17:54]--[2019-10-26 Sat 18:00] =>  0:06
+    CLOCK: [2019-10-26 Sat 17:47]--[2019-10-26 Sat 17:53] =>  0:06
     CLOCK: [2019-10-26 Sat 17:40]--[2019-10-26 Sat 17:46] =>  0:06
     CLOCK: [2019-10-26 Sat 16:01]--[2019-10-26 Sat 16:41] =>  0:40
     :END:
@@ -729,6 +731,12 @@ We should approach this incrementally. Next time we have a bit of
 spare time, we need to generate the model and then create the adapters
 from existing models. Finally we can look at how it will be integrated
 with tracing.
+
+Notes:
+
+- compilation generates an ODB error:
+
+: FATALODB include directories not defined.
 
 Merged stories:
 
